code: fix spacing on date(range)picker

--- a/src/date-range-picker/styles.scss
+++ b/src/date-range-picker/styles.scss
@@ -145,7 +145,7 @@ $brandPrimaryLight: #B6C6F6;
 
     .CalendarMonth--horizontal .CalendarMonth__caption,
     .CalendarMonth--vertical .CalendarMonth__caption {
-      padding: 15px 0 35px; }
+      padding: 15px 0 40px; }
 
     .CalendarMonth--vertical-scrollable .CalendarMonth__caption {
       padding: 5px 0; }
@@ -675,10 +675,10 @@ $brandPrimaryLight: #B6C6F6;
 
 .dateRangePicker {
   display: inline-block;
-  padding-left: 4px;
-  padding-right: 4px;
-  height: 35px;
+  padding-left: 3px;
+  padding-right: 3px;
   padding-top: 3px;
+  height: 35px;
   resize: none;
 
   font-family: $fontBase;
@@ -709,8 +709,7 @@ $brandPrimaryLight: #B6C6F6;
     .DateInput {
       position: static;
       display: block;
-      vertical-align: middle;
-      width: 96px;
+      width: 100px;
       padding: 0px;
       margin: 0px;
       background-color: transparent;
